python optimization swap-in. comparing base cost, pv opt, pv + battery heuristic, pv battery cvx opt

--- a/220210 EAPMSHES_YEAR - Dash.ipynb
+++ b/220210 EAPMSHES_YEAR - Dash.ipynb
@@ -2,18 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "using Pkg;\n",
+    "import Pkg\n",
     "using JuMP, HiGHS, StatsPlots, XLSX; #changeed Gurobi to highs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import Pkg; Pkg.add(\"HiGHS\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32m\u001B[1m   Resolving\u001B[22m\u001B[39m package versions...\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m METIS_jll ────── v5.1.3+0\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m HiGHS_jll ────── v1.12.0+0\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m OpenBLAS32_jll ─ v0.3.29+0\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m MathOptIIS ───── v0.1.1\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m HiGHS ────────── v1.20.1\n",
+      "\u001B[32m\u001B[1m  Installing\u001B[22m\u001B[39m 3 artifacts\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m artifact METIS       1.0 MiB\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m artifact HiGHS       2.4 MiB\n",
+      "\u001B[32m\u001B[1m   Installed\u001B[22m\u001B[39m artifact OpenBLAS32  13.9 MiB\n",
+      "\u001B[32m\u001B[1m    Updating\u001B[22m\u001B[39m `~/.julia/environments/v1.12/Project.toml`\n",
+      "  \u001B[90m[87dc4568] \u001B[39m\u001B[92m+ HiGHS v1.20.1\u001B[39m\n",
+      "\u001B[32m\u001B[1m    Updating\u001B[22m\u001B[39m `~/.julia/environments/v1.12/Manifest.toml`\n",
+      "  \u001B[90m[87dc4568] \u001B[39m\u001B[92m+ HiGHS v1.20.1\u001B[39m\n",
+      "  \u001B[90m[8c4f8055] \u001B[39m\u001B[92m+ MathOptIIS v0.1.1\u001B[39m\n",
+      "  \u001B[90m[8fd58aa0] \u001B[39m\u001B[92m+ HiGHS_jll v1.12.0+0\u001B[39m\n",
+      "  \u001B[90m[d00139f3] \u001B[39m\u001B[92m+ METIS_jll v5.1.3+0\u001B[39m\n",
+      "  \u001B[90m[656ef2d0] \u001B[39m\u001B[92m+ OpenBLAS32_jll v0.3.29+0\u001B[39m\n",
+      "\u001B[32m\u001B[1mPrecompiling\u001B[22m\u001B[39m packages...\n",
+      "    458.5 ms\u001B[32m  ✓ \u001B[39m\u001B[90mOpenBLAS32_jll\u001B[39m\n",
+      "    509.0 ms\u001B[32m  ✓ \u001B[39m\u001B[90mMETIS_jll\u001B[39m\n",
+      "   1355.3 ms\u001B[32m  ✓ \u001B[39m\u001B[90mMathOptIIS\u001B[39m\n",
+      "   1541.8 ms\u001B[32m  ✓ \u001B[39m\u001B[90mHiGHS_jll\u001B[39m\n",
+      "   6328.1 ms\u001B[32m  ✓ \u001B[39mHiGHS\n",
+      "  5 dependencies successfully precompiled in 9 seconds. 75 already precompiled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import Pkg; Pkg.add(\"HiGHS\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#DATA IMPORT\n",
@@ -95,7 +164,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "function runmodel()\n",
@@ -212,7 +285,11 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#SAVE DATA & GRAPHS\n",
@@ -242,7 +319,9 @@
    "cell_type": "code",
    "execution_count": 269,
    "metadata": {
-    "scrolled": false
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -300,14 +379,18 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.12.3",
+   "display_name": "Julia 1.12",
    "language": "julia",
    "name": "julia-1.12"
   },
@@ -315,7 +398,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.12.3"
+   "version": "1.12.4"
   }
  },
  "nbformat": 4,
