--- a/Energy Optimization Model.ipynb
+++ b/Energy Optimization Model.ipynb
@@ -111,7 +111,8 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
    "outputs": [],
